--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>This is a header.</h1>
     <p> This is a paragraph.</p>
     <p> This is second paragraph.</p>
+    <p> Third Paragraph.</p>
 </body>
 </html>
